--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.10.99",
     "gsap": "^3.13.0",
     "next": "16.0.1",
     "react": "19.2.0",
